# AuthCore

./: .gitignore  README.md
web_server/: .gitignore  CMakeLists.txt  data_base.h  main.cpp  password_hasher.h  vcpkg.json
